--- a/apps/api/vercel.json
+++ b/apps/api/vercel.json
@@ -1,12 +1,7 @@
 {
   "version": 2,
-  "installCommand": "npm install",
-  "builds": [
-    {
-      "src": "api/index.ts",
-      "use": "@vercel/node"
-    }
-  ],
+  "installCommand": "bun install",
+  "buildCommand": "bun run build",
   "rewrites": [
     {
       "source": "/(.*)",
