--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -30,8 +30,8 @@
     "@nestjs/mapped-types": "^2.1.0",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/serve-static": "^5.0.0",
     "@prisma/client": "^6.17.0",
-    "@supabase/supabase-js": "^2.89.0",
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
