--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,6 +47,21 @@ services:
       - postgres
     restart: always
 
+  prisma-studio:
+    container_name: prisma-studio
+    image: mutualist-api:latest
+    profiles:
+      - dev
+    ports:
+      - "5555:5555"
+    environment:
+      - DATABASE_URL=postgresql://postgres:postgres@postgres:5432/mutualist?schema=public
+    command:
+      ["bunx", "prisma", "studio", "--port", "5555", "--hostname", "0.0.0.0"]
+    depends_on:
+      - postgres
+    restart: always
+
   postgres:
     image: postgres:15-alpine
     container_name: postgres
