--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,11 @@ services:
     ports:
       - "3000:3000"
     restart: always
+    environment:
+      - NEXT_PUBLIC_API_URL=http://localhost:8080/api
+      - INTERNAL_API_URL=http://mutualist-api:8080/api
+    extra_hosts:
+      - "localhost:host-gateway"
 
   mutualist-admin:
     container_name: mutualist-admin
@@ -20,7 +25,8 @@ services:
     ports:
       - "3002:3000"
     environment:
-      - NEXT_PUBLIC_API_URL=http://mutualist-api:8080
+      - NEXT_PUBLIC_API_URL=http://localhost:8080/api
+      - INTERNAL_API_URL=http://mutualist-api:8080/api
       - NEXTAUTH_SECRET=supersecretchangeinproduction
       - NEXTAUTH_URL=http://localhost:3002
     depends_on:
@@ -37,7 +43,6 @@ services:
       - "8080:8080"
     environment:
       - DATABASE_URL=postgresql://postgres:postgres@postgres:5432/mutualist?schema=public
-      - DIRECT_URL=postgresql://postgres:postgres@postgres:5432/mutualist?schema=public
       - JWT_SECRET=supersecretjwtkeychangeinproduction
       - UPLOAD_DIR=/app/uploads
       - API_BASE_URL=http://localhost:8080
