--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -51,14 +51,16 @@ services:
       dockerfile: apps/api/Dockerfile
     # No ports - Dokploy/Traefik handles routing via domain
     environment:
-      - DATABASE_URL=postgresql://${POSTGRES_USER:-postgres}:${POSTGRES_PASSWORD:-postgres}@postgres:5432/${POSTGRES_DB:-mutualist}?schema=public
+      # Use DATABASE_URL directly (set in Dokploy env vars)
+      - DATABASE_URL=${DATABASE_URL}
       - JWT_SECRET=${JWT_SECRET}
       - UPLOAD_DIR=/app/uploads
       - API_BASE_URL=${API_BASE_URL}
     volumes:
       - uploads_data:/app/uploads
     depends_on:
-      - postgres
+      postgres:
+        condition: service_healthy
     restart: always
 
   postgres:
@@ -66,12 +68,22 @@ services:
     container_name: postgres
     environment:
       POSTGRES_USER: ${POSTGRES_USER:-postgres}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-postgres}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: ${POSTGRES_DB:-mutualist}
     # No external ports - only accessible within Docker network
     volumes:
       - postgres_data:/var/lib/postgresql/data
     restart: always
+    healthcheck:
+      test:
+        [
+          "CMD-SHELL",
+          "pg_isready -U ${POSTGRES_USER:-postgres} -d ${POSTGRES_DB:-mutualist}",
+        ]
+      interval: 5s
+      timeout: 5s
+      retries: 10
+      start_period: 10s
 
 volumes:
   postgres_data:
