--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -7,11 +7,12 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    # No ports - Dokploy/Traefik handles routing via domain
     restart: always
     environment:
       - NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_API_URL}
       - INTERNAL_API_URL=http://mutualist-api:8080/api
+    networks:
+      - dokploy-network
 
   mutualist-admin:
     container_name: mutualist-admin
@@ -19,7 +20,6 @@ services:
     build:
       context: .
       dockerfile: apps/admin/Dockerfile
-    # No ports - Dokploy/Traefik handles routing via domain
     environment:
       - NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_API_URL}
       - INTERNAL_API_URL=http://mutualist-api:8080/api
@@ -28,6 +28,8 @@ services:
     depends_on:
       - mutualist-api
     restart: always
+    networks:
+      - dokploy-network
 
   mutualist-life:
     container_name: mutualist-life
@@ -35,13 +37,14 @@ services:
     build:
       context: .
       dockerfile: apps/life/Dockerfile
-    # No ports - Dokploy/Traefik handles routing via domain
     environment:
       - NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_API_URL}
       - INTERNAL_API_URL=http://mutualist-api:8080/api
     depends_on:
       - mutualist-api
     restart: always
+    networks:
+      - dokploy-network
 
   mutualist-api:
     container_name: mutualist-api
@@ -49,9 +52,7 @@ services:
     build:
       context: .
       dockerfile: apps/api/Dockerfile
-    # No ports - Dokploy/Traefik handles routing via domain
     environment:
-      # Use DATABASE_URL directly (set in Dokploy env vars)
       - DATABASE_URL=${DATABASE_URL}
       - JWT_SECRET=${JWT_SECRET}
       - UPLOAD_DIR=/app/uploads
@@ -62,6 +63,8 @@ services:
       postgres:
         condition: service_healthy
     restart: always
+    networks:
+      - dokploy-network
 
   postgres:
     image: postgres:15-alpine
@@ -70,20 +73,21 @@ services:
       POSTGRES_USER: ${POSTGRES_USER:-postgres}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: ${POSTGRES_DB:-mutualist}
-    # No external ports - only accessible within Docker network
     volumes:
       - postgres_data:/var/lib/postgresql/data
     restart: always
     healthcheck:
-      test:
-        [
-          "CMD-SHELL",
-          "pg_isready -U ${POSTGRES_USER:-postgres} -d ${POSTGRES_DB:-mutualist}",
-        ]
+      test: ["CMD-SHELL", "pg_isready -U postgres -d mutualist"]
       interval: 5s
       timeout: 5s
       retries: 10
       start_period: 10s
+    networks:
+      - dokploy-network
+
+networks:
+  dokploy-network:
+    external: true
 
 volumes:
   postgres_data:
